--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".Search"/>
         <activity android:name=".SearchedAnswer"/>
         <activity android:name=".MyContent"/>
+        <activity android:name=".AllComment"/>
 
         <activity
             android:name=".SplashScreen"
