--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.olx">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -11,8 +13,9 @@
         android:roundIcon="@mipmap/logoofsih_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Sollution"></activity>
-        <activity android:name=".Rent"></activity>
+        <activity android:name=".WeatherActivity"></activity>
+        <activity android:name=".Sollution" />
+        <activity android:name=".Rent" />
         <activity android:name=".Myscheme" />
         <activity android:name=".CameraActivity" />
         <activity android:name=".Irrigation" />
